use UA's default line-height here to ensure font never gets clipped

--- a/main/src/scss/opintoni/_week-feed.scss
+++ b/main/src/scss/opintoni/_week-feed.scss
@@ -78,6 +78,7 @@ $tablist-single-row: min-width 28.75em;
 
     li {
       display: flex;
+      line-height: normal;
       align-items: center;
       margin-right: 0.4em;
       margin-bottom: 0.5em;
